--- a/gatsby-blog/package.json
+++ b/gatsby-blog/package.json
@@ -13,6 +13,7 @@
     "gatsby-plugin-google-analytics": "^1.0.12",
     "gatsby-plugin-offline": "^1.0.10",
     "gatsby-plugin-react-helmet": "^1.0.8",
+    "gatsby-plugin-sass": "^1.0.13",
     "gatsby-plugin-sharp": "^1.6.21",
     "gatsby-plugin-typography": "^1.7.10",
     "gatsby-remark-copy-linked-files": "^1.5.21",
